<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_map">

    <fragment android:id="@+id/nav_map"
        android:name="com.terrycollins.cellid.ui.fragment.MapFragment"
        android:label="@string/nav_map" />
    <fragment android:id="@+id/nav_cells"
        android:name="com.terrycollins.cellid.ui.fragment.CellListFragment"
        android:label="@string/nav_cells" />
    <fragment android:id="@+id/nav_anomalies"
        android:name="com.terrycollins.cellid.ui.fragment.AnomalyFragment"
        android:label="@string/nav_alerts" />
    <fragment android:id="@+id/nav_settings"
        android:name="com.terrycollins.cellid.ui.fragment.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
